--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -28,7 +28,7 @@
         border: #e0e0e0,
 
         accent: (
-            bg: #37c0fb,
+            bg: #59a895,
             fg: #fff
         ),
         obscure: (
