--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,7 @@
 @import url("css/fontawesome-all.min.css");
 @import url("css/font-source-sans-pro.css");
 @import 'libs/custom_vars.scss';
+@import 'custom.scss';
 
 /*
     Arcana by HTML5 UP
