--- a/layouts/partials/homepage/banner.html
+++ b/layouts/partials/homepage/banner.html
@@ -1,8 +1,8 @@
 <section id="banner">
-    <header>
+    {{/*  <header>
         <h2>{{ .contents | markdownify }}</h2>
         {{- if .button }}
             <a href="{{ .button.url }}" class="button">{{ .button.contents }}</a>
         {{- end }}
-    </header>
+    </header>  */}}
 </section>
