--- a/layouts/partials/sidebar/sidebar1.html
+++ b/layouts/partials/sidebar/sidebar1.html
@@ -1,8 +1,6 @@
 <section>
     <h3>{{ T "sidebar_heading_1" }}</h3>
-    <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-    Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-    Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
+    <p>Thank you current HOA board for serving the community. We appreciate all the hardwork, and acknowledge all your accomplishments!</p>
     <footer>
         <a href="#" class="button">{{ T "sidebar_button_1" }}</a>
     </footer>
