--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -2,3 +2,4 @@
    * Put your custom head template for analytics, etc. into your site's
    * (not the theme's) layouts/partials/head/custom.html
    */}}
+   <link rel="shortcut icon" type="image/x-icon" href="/static/images/favicon.ico">
