--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -39,8 +39,7 @@
                 <li>{{ replace .Site.Copyright "{currentYear}" now.Year }}
             {{ end }}
             {{- if .Site.Params.attribution | default true }}
-                <li>Design: <a href="https://html5up.net">HTML5 UP</a>
-                <li><a href="https://github.com/half-duplex/hugo-arcana">Theme</a>
+                <li>Made with 💖 for the neighborhood</a>
             {{- end }}
         </ul>
     </div>
