--- a/layouts/partials/sidebar/sidebar3.html
+++ b/layouts/partials/sidebar/sidebar3.html
@@ -1,6 +1,6 @@
 <section>
-    <h3>{{ T "sidebar_heading_2" }}</h3>
-    <p>Come join in on the fun and experience. We are neighbors that get to know each other!</p>
+    <h3>{{ T "sidebar_heading_3" }}</h3>
+    <p>Thank you past HOA Board members for serving the community and providing a groundwork for our newest members!</p>
     <footer>
         <a href="#" class="button">{{ T "sidebar_button_2" }}</a>
     </footer>
