--- a/layouts/partials/sidebar/sidebar1.html
+++ b/layouts/partials/sidebar/sidebar1.html
@@ -5,7 +5,7 @@
         <a href="#" class="button">{{ T "sidebar_button_1" }}</a>
     </footer>
 </section>
-<section>
+{{/*  <section>
     <h3>{{ T "sidebar_heading_2" }}</h3>
     <ul class="links">
         <li><a href="#">Amet turpis, feugiat et sit amet</a></li>
@@ -18,4 +18,4 @@
     <footer>
         <a href="#" class="button">{{ T "sidebar_button_2" }}</a>
     </footer>
-</section>
+</section>  */}}
