--- a/layouts/partials/sidebar/sidebar1.html
+++ b/layouts/partials/sidebar/sidebar1.html
@@ -1,6 +1,6 @@
 <section>
     <h3>{{ T "sidebar_heading_1" }}</h3>
-    <p>Thank you current HOA board for serving the community. We appreciate all the hardwork, and acknowledge all your accomplishments!</p>
+    <h3>Thank you current HOA board for serving the community. We appreciate all the hardwork, and acknowledge all your accomplishments!</h3>
     <footer>
         <a href="#" class="button">{{ T "sidebar_button_1" }}</a>
     </footer>
