--- a/layouts/partials/sidebar/sidebar2.html
+++ b/layouts/partials/sidebar/sidebar2.html
@@ -1,6 +1,6 @@
 <section>
     <h3>{{ T "sidebar_heading_2" }}</h3>
-    <p>Come join in on the fun and experience. We are neighbors that get to know each other!</p>
+    <p>Come join in on the fun and experience getting to know your neighbors.</p>
     <footer>
         <a href="#" class="button">{{ T "sidebar_button_2" }}</a>
     </footer>
