--- a/layouts/partials/sidebar/sidebar4.html
+++ b/layouts/partials/sidebar/sidebar4.html
@@ -1,8 +1,8 @@
 <section>
-    <h3>{{ T "sidebar_heading_3" }}</h3>
-    <h3>Thank you past HOA Board members for serving the community and providing a groundwork for the new members!</h3>
+    <h3>{{ T "sidebar_heading_4" }}</h3>
+    <h3>Do you like international food? Come try various foods from our diverse neighborhood!</h3>
     <footer>
-        <a href="#" class="button">{{ T "sidebar_button_2" }}</a>
+        <a href="#" class="button">{{ T "sidebar_button_4" }}</a>
     </footer>
 </section>
 {{/*  <section>
