--- a/layouts/partials/head/custom.html
+++ b/layouts/partials/head/custom.html
@@ -3,3 +3,5 @@
    * (not the theme's) layouts/partials/head/custom.html
    */}}
    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+   <link rel="stylesheet" href="https://unpkg.com/photoswipe/dist/photoswipe.css">
+
